blink-led/build/log/idf_py_stderr_output_78486
Command: make -j 14 all
Configuration Report                                                                                                                       
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
   Parser Version: 1                                                                                                                       
   Verbosity: default                                                                                                                      
   Defaults policy: sdkconfig                                                                                                              
   Status: Finished with notifications                                                                                                     
                                                                                                                                           
  Default Value Mismatch                                                                                                                   
   ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────   
    Using sdkconfig default values                                                                                                         
    Choice symbols with different default selection between sdkconfig and Kconfig                                                          
    LIBC_STDOUT_LINE_ENDING: Kconfig default selection: choice deselected, sdkconfig default selection: LIBC_STDOUT_LINE_ENDING_CRLF       
    LIBC_STDIN_LINE_ENDING: Kconfig default selection: choice deselected, sdkconfig default selection: LIBC_STDIN_LINE_ENDING_CR           
   ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────   
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
/home/jona/esp-idf/embedded/blink-led/main/blink-led.c: In function 'app_main':
/home/jona/esp-idf/embedded/blink-led/main/blink-led.c:5:28: error: implicit declaration of function 'pcTaskGetName' [-Wimplicit-function-declaration]
    5 |         char*ourTaskName = pcTaskGetName(NULL);
      |                            ^~~~~~~~~~~~~
/home/jona/esp-idf/embedded/blink-led/main/blink-led.c:5:28: error: initialization of 'char *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
/home/jona/esp-idf/embedded/blink-led/main/blink-led.c:7:9: error: implicit declaration of function 'ESPLOG' [-Wimplicit-function-declaration]
    7 |         ESPLOG(ourTaskName, "Hello, starting up!\n");
      |         ^~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/blink-led.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:8889: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
